# open-maps

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: pmtiles_helpers.py
data/zcta/: zcta.pmtiles
open-maps-frontend/: index.html  package-lock.json  package.json
open-maps-frontend/src/: App.vue  style.css
open-maps-frontend/src/components/: LayerControl.vue
scripts/: VoronoiDockerfile  build-pmtiles.sh  generate-voronoi-polygons.py  scratch.sql  voronoi-generation.md
